# OpenGL-GLTF-Viewer

./: CMakeLists.txt  README.md
assets/shaders/basic/: fragment.glsl  vertex.glsl
core/: CMakeLists.txt
core/src/core/: Window.cpp  Window.hpp
core/src/core/GL/: GLBuffer.hpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  VAO.hpp
core/src/glad/: glad.c  glad.h
model-viewer/: CMakeLists.txt  main.cpp
triangle/: CMakeLists.txt
